[project]
name = "reydb"
version = "1.3.11"
description = "Database method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "db", "database", "orm", "async", "asynchronous"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "aiomysql",
    "pydantic[email]",
    "pymysql",
    "reykit",
    "sqlalchemy",
    "sqlmodel"
]

[project.urls]
homepage = "https://github.com/reyxbo/reydb/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
